<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="activity_search_text">Вы открыли экран Поиск</string>
    <string name="activity_media_text">Вы открыли экран Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_text">Присоединяйся к Android-разработке в Практикуме! Ссылка на онлайн-обучение - https://practicum.yandex.ru/android-developer</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_address_example">student@example.com</string>
    <string name="mail_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="choose_app">Выберите приложение.</string>
    <string name="no_such_app">Выберите приложение.</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_activity_title">Поиск</string>
    <string name="search_text">search_text</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась.\nПроверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_searched">Вы искали</string>
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="empty_playlists">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="add_playlists">Новый плейлист</string>
    <string name="error_no_internet">Проверьте подключение к интернету</string>
    <string name="error_bad_request">Некорректный запрос</string>
    <string name="error_server">Ошибка сервера: %1$d</string>
    <string name="default_track_time">00:00</string>
    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="add_playlist_button_text">Создать</string>
    <string name="finish_playlist_creation_title">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created_format">Плейлист %s создан</string>
    <string name="playlist_cover">Плейлист %s создан</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="added_to_playlist_fmt">Добавлено в “%1$s”</string>
    <string name="already_in_playlist_fmt">Уже есть в “%1$s”</string>
    <string name="playlist_tracks_count">%1$d треков</string>
    <string name="back">Назад</string>
    <string name="share">Поделиться</string>
    <string name="menu">Меню</string>
    <string name="remove_track_question">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_meta_template">%1$s · %2$s</string>
    <string name="hh_mm_template">%1$d ч %2$d мин</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="remove_playlist_question">Хотите удалить плейлист?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="finish_edit_title">Редактирование</string>
    <string name="unsaved_data_msg">Есть несохранённые изменения. Выйти без сохранения?</string>
    <string name="playlist_updated_format">Плейлист «%1$s» обновлён</string>
    <string name="zero_zero_time">00:00</string>
    <string name="no_tracks_to_share">В плейлисте нет списка треков, которым можно поделиться</string>
    <string name="pause">Пауза</string>
    <string name="play">Играть</string>
</resources>