<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/settings_background_color"
    android:padding="4dp"
    tools:context = ".presentation.ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            style="@style/TitleTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="10dp"
        android:layout_marginTop="@dimen/buttons_margin"
        android:paddingStart="@dimen/screen_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            style="@style/SettingsOptionsTextStyle"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint="@color/switch_track_color"
            style="@style/Widget.MaterialComponents.CompoundButton.Switch"
            android:layout_marginEnd="6dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/share_button"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/settings_options_padding_vertical"
        android:paddingStart="@dimen/screen_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_app"
            style="@style/SettingsOptionsTextStyle" />

        <ImageView
            android:src="@drawable/share"
            style="@style/SettingsOptionsIconStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/support_button"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/settings_options_padding_vertical"
        android:paddingStart="@dimen/screen_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/s"
            android:text="@string/write_to_support"
            style="@style/SettingsOptionsTextStyle" />

        <ImageView
            android:src="@drawable/support"
            style="@style/SettingsOptionsIconStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/agreement_button"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="@dimen/settings_options_padding_vertical"
        android:paddingStart="@dimen/screen_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            style="@style/SettingsOptionsTextStyle" />

        <ImageView
            android:src="@drawable/arrow_forward"
            style="@style/SettingsOptionsIconStyle" />
    </LinearLayout>


</LinearLayout>
