<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="22sp">
            </TextView>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="28dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/buttons_margin"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="@string/search_button"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                app:backgroundTint="@color/white"
                app:icon="@drawable/search"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding"
                app:iconTint="#000000"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/media"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:layout_marginTop="@dimen/buttons_margin"
                app:icon="@drawable/library"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding"
                app:iconTint="#000000"
                app:cornerRadius="@dimen/button_radius"
                android:text="@string/media_button"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                >
            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#ffffff"
                android:layout_marginTop="@dimen/buttons_margin"
                app:icon="@drawable/settings"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/icon_padding"
                app:iconTint="#000000"
                app:cornerRadius="@dimen/button_radius"
                android:text="@string/settings_button"
                android:textSize="@dimen/text_size"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                >
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>