<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background_color"
    android:padding="4dp"
    tools:context=".presentation.ui.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_activity_title"
                android:layout_marginStart="@dimen/title_back_text_padding"
                android:layout_marginTop="10dp"
                style="@style/TitleTextStyle"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/screen_padding"
                android:hint="@string/search_activity_title"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:drawableStart="@drawable/search"
                android:drawableEnd="@drawable/ic_clear"
                android:drawablePadding="8dp"
                android:drawableTint="@color/gray"
                android:background="@drawable/search_background"
                android:padding="@dimen/search_bar_icon_padding"
                android:imeOptions="actionDone"
                android:singleLine="true" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/history_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_searched"
                android:fontFamily="@font/ys_display_regular"
                android:textColor="@color/text_black"
                android:textFontWeight="500"
                android:textSize="19sp"
                android:paddingBottom="8dp"
                android:layout_gravity="center"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:overScrollMode="never"
                android:nestedScrollingEnabled="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_history_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/clear_history"
                style="@style/SearchActivityButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/empty_view"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="32dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/nothing_found" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nothing_found"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                style="@style/ErrorTextStyle"
                tools:text="Very Very Very Long Track Name That Should Be Truncated"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_view"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="32dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/no_internet" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:text="@string/no_internet"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                style="@style/ErrorTextStyle"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                style="@style/SearchActivityButtonStyle"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>
</FrameLayout>