<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:paddingHorizontal="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/drag_handle"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bs_handle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/playlistCover"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/playlistTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/ys_display_regular"
                    android:textFontWeight="400"
                    android:textColor="@color/text_black"
                    android:maxLines="2"
                    tools:text="Best songs 2021"/>

                <TextView
                    android:id="@+id/playlistTrackCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="@color/text_black"
                    android:fontFamily="@font/ys_display_regular"
                    android:textFontWeight="400"
                    tools:text="98 треков"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/actionShare"
            android:layout_marginTop="8dp"
            android:paddingVertical="21dp"
            android:text="@string/share"
            android:textColor="@color/text_black"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/actionEdit"
            android:paddingVertical="21dp"
            android:text="@string/edit_info"
            android:textColor="@color/text_black"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/actionDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="21dp"
            android:text="@string/delete_playlist"
            android:textColor="@color/text_black"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>